CSS/style.css
/* ... */
.events-pagination .prev a::after,
.events-pagination .next a::after,
.events-pagination .page a::after {
  background-color: transparent;
}

.event-sidebar {
  background-color: var(--cc-white-sugar);
  height: 1000px;
}

.event-detailing .info-list {
  width: 90%;
  border-bottom: 1px solid var(--cc-grey-lighter);
  align-items: center;
}

.event-detailing .info-list:last-of-type {
  border-bottom: none;
}

.event-detailing {
  top: 40px;
  left: 0;
  width: 390px;
  max-width: 390px;
}

.event-title {
  margin-bottom: -30px;
}

.book-seat {
  display: flex;
  background-color: var(--cc-primary-bg);
  border-radius: var(--bs-border-radius);
}

.book-seat:hover {
  background-color: var(--cc-color-dark);
}

.book-seat:hover a:hover::after,
a:focus::after {
  transform: scale(0);
}

.book-seat a {
  color: var(--cc-white-sugar);
  text-decoration: none;
  font-size: 1.15rem;
  font-weight: var(--cc-body-font-weight);
}

.book-seat a:hover {
  color: var(--cc-bg-primary-lighter);
}

.share-event {
  width: 90%;
}

.share-event span {
  font-size: 20px;
}

.share-event h6 {
  font-size: 20px;
}

.share-event a::after {
  background-color: transparent;
}

/*  ************************************************************************************
  COMING SOON
****************************************************************************************/
#coming-soon-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right,
    var(--cc-bg-distinct-lighter) 100px,
    var(--cc-bg-primary-lighter) 300px,
    var(--cc-bg-primary-lighter) 1500px,
    var(--cc-bg-distinct-lighter)
  );
  min-height: 100vh;
  min-width: 100vw;
  width: 100vw;
  height: auto;
}

a.edu_theme::after {
  background-color: transparent;
}

.card-group > .card + .card {
  border-left: 1px solid #c1c2cc;
}

.edu_theme h2,
.edu_theme h1 {
  letter-spacing: -1px;
}

.not-found-msg {
  flex-direction: column;
}

.not-found-msg h1 {
  font-size: 128px;
}

.go-to-home {
  background-color: var(--cc-primary-bg);
}

a.go-to-home:hover {
  cursor: pointer;
  background-color: var(--cc-bg-dark);
}

a.go-to-home:hover input {
  cursor: pointer;
  background-color: var(--cc-bg-dark);
}

a.go-to-home::after {
  background-color: transparent;
}

#coming-soon-content {
  flex-direction: column;
}

.newsletter-container .read-more:hover {
  background-color: var(--cc-primary-bg);
}

/*  ************************************************************************************
  Gallery
****************************************************************************************/

.masonry {
  display: flex;
  width: 100%;
  margin-left: -10px;
  counter-reset: brick;
  flex-flow: row wrap;
}

.masonry-brick {
  overflow: hidden;
  border-radius: 5px;
  margin: 0 0 10px 10px;
  color: white;
}

.masonry-brick img {
  flex: auto;
  min-height: 250px;
  min-width: 150px;
}

.hovered-content {
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 5000;
  transform: translate(-50%, -50%);
  counter-increment: brick;
  content: counter(brick);
  transition: font-size 0.25s, opacity 0.25s ease-in-out;
  font-weight: 700;
  opacity: 0;
  font-size: 1.25em;
  background: #333;
  padding: 5px 10px;
}

.masonry-brick:hover .hovered-content {
  font-size: 2.25em;
  color: white;
  opacity: 0.75;
}

@media only screen and (min-width: 1024px) {
  /* Horizontal masonry bricks on desktop-sized screen */
  .masonry-brick:nth-child(4n + 1) {
    width: 250px;
  }
  .masonry-brick:nth-child(4n + 2) {
    width: 325px;
  }
  .masonry-brick:nth-child(4n + 3) {
    width: 180px;
  }
  .masonry-brick:nth-child(4n + 4) {
    width: 380px;
  }
}

@media only screen and (max-width: 1023px) and (min-width: 768px) {
  /* Horizontal masonry bricks on tabled-sized screen */
  .masonry-brick:nth-child(4n + 1) {
    width: 200px;
  }
  .masonry-brick:nth-child(4n + 2) {
    width: 250px;
  }
  .masonry-brick:nth-child(4n + 3) {
    width: 120px;
  }
  .masonry-brick:nth-child(4n + 4) {
    width: 280px;
  }
}

.masonry-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  filter: brightness(90%);
}

.gallery-filter .btn.active {
  background-color: var(--cc-primary-bg);
  color: var(--cc-white-sugar);
  border-color: transparent;
  font-weight: bold;
}

.gallery-filter .btn {
  background-color: var(--cc-bg-primary-lighter);
  color: var(--cc-dark);
  border-color: transparent;
  font-weight: bold;
}

.gallery-filter .btn:hover {
  background-color: var(--cc-primary-light);
  color: var(--cc-white-sugar);
}

/*  ************************************************************************************
  Blog Details
****************************************************************************************/
#blog-details-section {
  margin: 30px 0 0 10%;
  padding: 0 2%;
}

.tag {
  flex: 1;
}

.meta {
  flex: 2;
}

.meta-time {
  flex: 1;
}
.meta-date {
  flex: 2;
}

.meta-location {
  flex: 4;
}

.meta h5 {
  font-size: 16px;
  margin: 0;
}

.author-meta img {
  border-radius: 100%;
}

.content-img img {
  max-width: 463px;
  max-height: 315px;
}

.blog-details--image {
  max-width: 1100px;
  max-height: 550px;
}

.blog-details--share span {
  font-size: 1.25rem;
}

.blog-details--share span.vicon-youtube,
.blog-details--share span.vicon-facebook {
  font-size: 1.5rem;
}

.blog-details--share a::after {
  background-color: transparent;
}

.blog-details--share h5 {
  margin: 0;
}

.pagination-prev,
.pagination-next {
  background-color: var(--cc-bg-primary-lighter);
  font-weight: bold;
  border-radius: 5px;
  color: var(--cc-bg-dark);
  min-height: 175px;
}

.pagination-prev:hover,
.pagination-next:hover {
  background-color: var(--cc-white-sugar);
  cursor: pointer;
  border-bottom: 1px solid var(--cc-primary);
}

.pagination-prev span,
.pagination-next span {
  font-size: 1.5rem;
}

.pagination-prev span,
.pagination-next span {
  flex: 1;
}

.pagination-prev p,
.pagination-next p {
  flex: 6;
}
/* ... */

